--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header>
+        <div class="header_container">
+            <div class="container_logo">
+                <div class="logo">
+                    <p>AQUA</p>
+                    <img src="/storage/img/Water.png" alt="">
+                </div>
+            </div>
+            <div class="container_menu">
+                <div class="home">
+                    <a href="">INICIO</a>
+                    <a href="">CÓMO JUGAR</a>
+                    <a href="">APÓYANOS</a>
+                    <a href="">SOBRE NOSOTROS</a>
+                </div>
+            </div>
+            <div class="nigth_container">
+                <div class="night">
+                    <div class="moon">
+                        <img src="/storage/img/Moon.png" alt="">
+                    </div>
+                    <div class="sun">
+                        <img src="/storage/img/Sun.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
