feat: :lipstick: header css add

--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
             </div>
             <div class="container_menu">
                 <div class="home">
-                    <a href="">INICIO</a>
-                    <a href="">CÓMO JUGAR</a>
-                    <a href="">APÓYANOS</a>
-                    <a href="">SOBRE NOSOTROS</a>
+                    <div class="init">
+                    <a href=""><p>INICIO</p></a>
+                    </div>
+                    <div class="how">
+                    <a href=""><p>CÓMO JUGAR</p></a>
+                    </div>
+                    <div class="help">
+                    <a href=""><p>APÓYANOS</p></a>
+                    </div>
+                    <div class="about">
+                    <a href=""><p>SOBRE NOSOTROS</p></a>
+                    </div>
                 </div>
             </div>
-            <div class="nigth_container">
+            <div class="night_container">
                 <div class="night">
                     <div class="moon">
                         <img src="/storage/img/Moon.png" alt="">
