--- a/index.html
+++ b/index.html
@@ -43,5 +43,44 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="presentation">
+            <div class="side_1">
+                <div class="logo_2">
+                    <img src="/storage/img/Logo.png" alt="">
+                </div>
+                <div class="info">
+                    <h1>
+                        Somos creatividad, somos Crae                        
+                    </h1>
+                    <p>Crae es un juego de cartas inclusivo donde personas videntes, no<br>videntes y con discapacidad visual pueden participar y disfrutar en<br>conjunto.</p>
+                </div>
+            </div>
+            <div class="side_2">
+                <div class="info_1">
+                    <div class="photo">
+                        <img src="/storage/img/Card.png" alt="">
+                    </div>
+                    <div class="buttom_1">
+                        <a href="">
+                            <img src="/storage/img/Market.png" alt="">
+                            <p>Comprar</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="social">
+                    <div>
+                        <a href="/storage/img/F.png"><img src="" alt=""></a>
+                    </div>
+                    <div>
+                        <a href="/storage/img/I.png"><img src="" alt=""></a>
+                    </div>
+                    <div>
+                        <a href="/storage/img/K.png"><img src="" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
