--- a/index.html
+++ b/index.html
@@ -62,21 +62,27 @@
                         <img src="/storage/img/Card.png" alt="">
                     </div>
                     <div class="buttom_1">
-                        <a href="">
-                            <img src="/storage/img/Market.png" alt="">
-                            <p>Comprar</p>
-                        </a>
+                        <div class="item">
+                            <a href="">
+                                <div class="market">
+                                    <img src="/storage/img/Market.png" alt="">
+                                </div>
+                                <div class="buy">
+                                    <p>Comprar</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="social">
                     <div>
-                        <a href="/storage/img/F.png"><img src="" alt=""></a>
+                        <a href=""><img src="/storage/img/F.png" alt=""></a>
                     </div>
                     <div>
-                        <a href="/storage/img/I.png"><img src="" alt=""></a>
+                        <a href=""><img src="/storage/img/I.png" alt=""></a>
                     </div>
                     <div>
-                        <a href="/storage/img/K.png"><img src="" alt=""></a>
+                        <a href=""><img src="/storage/img/K.png" alt=""></a>
                     </div>
                 </div>
             </div>
