--- a/index.html
+++ b/index.html
@@ -87,6 +87,97 @@
                 </div>
             </div>
         </section>
+        <section class="how_container">
+            <div class="how">   
+                <h1>¿Cómo jugar?</h1>
+            </div>
+            <div class="expl">
+                <p>Crae posee una modalidad de juego definidas<br>
+                    pero siempre apoyamos la creatividad y que<br>
+                    crees tus propias reglas y modalidades.</p>
+            </div>
+            <div class="rules">
+                <div class="rule_1">
+                    <div class="rule_1_img">
+                        <img src="/storage/img/1.png" alt="">
+                    </div>
+                    <div class="rule_1_text">
+                        <p>Uno de los jugadores hace de “creativo” en cada uno de los turnos.<br>
+                            Observa sus 6 cartas de la mano y, de una de ellas, debe construir<br>
+                            una frase, palabra o sonido y decirla en voz alta (sin mostrar la<br>
+                            carta a los otros jugadores). La frase puede ser inventada o puede<br>
+                            estar inspirada en la poesía, literatura, cine, etc. 
+                        </p>
+                    </div>
+                    <div class="rule_1_img_1">
+                        <img src="/storage/img/Cards.png" alt="">
+                    </div>
+                </div>
+                <div class="rule_2">
+                    <div class="rule_2_img">
+                        <img src="/storage/img/2.png" alt="">
+                    </div>
+                    <div class="rule_2_text">
+                        <p>Comenzamos el juego de izquierda a derecha. Selecciona una carta<br>
+                            que inspire tu frase y dila en voz alta. El resto de jugadores<br>
+                            seleccionará de entre sus cartas la que mejor se adapte a la frase<br>
+                            construida por el creativo.
+                        </p>
+                    </div>
+                    <div class="rule_2_img_1">
+                        <img src="/storage/img/Check.png" alt="">
+                    </div>
+                </div>
+                <div class="rule_3">
+                    <div class="rule_3_img">
+                        <img src="/storage/img/3.png" alt="">
+                    </div>
+                    <div class="rule_3_text">
+                        <p>El objetivo de los jugadores es adivinar cuál de las cartas es la que<br>
+                            el creativo usó para construir su frase. Cada jugador vota de forma<br>
+                            secreta la carta que cree que pertenece al creativo. Para ello,<br>
+                            coloca boca abajo frente a él un objeto que hayas escogido<br>
+                            previamente. 
+                        </p>
+                    </div>
+                    <div class="rule_3_img_1">
+                        <img src="/storage/img/Vote.png" alt="">
+                    </div>
+                </div>
+                <div class="rule_4">
+                    <div class="rule_4_img">
+                        <img src="/storage/img/4.png" alt="">
+                    </div>
+                    <div class="rule_4_text">
+                        <p>- Si todos los jugadores aciertan la carta del creativo, todos los<br>
+                            jugadores excepto el creativo ganan 2 puntos.<br> 
+                            - En cualquier otro caso, tanto el creativo como los jugadores que<br>
+                            hayan acertado, obtienen 3 puntos.<br>
+                            - Todos los jugadores ganan un punto por cada voto que reciba su carta. 
+                        </p>
+                    </div>
+                    <div class="rule_4_img_1">
+                        <img src="/storage/img/List.png" alt="">
+                    </div>
+                </div>
+                <div class="rule_5">
+                    <div class="rule_5_img">
+                        <img src="/storage/img/5.png" alt="">
+                    </div>
+                    <div class="rule_4_text">
+                        <p>Comenzamos el juego de izquierda a derecha. Selecciona una carta<br>
+                            que inspire tu frase y dila en voz alta. El resto de jugadores<br>
+                            seleccionará de entre sus cartas la que mejor se adapte a la frase<br>
+                            construida por el creativo.
+                        </p>
+                    </div>
+                    <div class="rule_5_img_1">
+                        <img src="/storage/img/Flag.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="help"></section>
     </main>
 </body>
 </html>
