feat: :sparkles: help structure html add

--- a/index.html
+++ b/index.html
@@ -177,7 +177,31 @@
                 </div>
             </div>
         </section>
-        <section class="help"></section>
+        <section class="help_container">
+            <div class="help">
+                <div class="title_1">
+                    <h1>Apóyanos</h1>
+                </div>
+            </div>
+            <div class="info_2">
+                <div class="text">
+                    <p>Por favor, si quieres ayudarnos económicamente, no<br>
+                        dudes en donar en Kickstarter.<br>
+                        Así financiarías nuestro proyecto y contribuirías a<br>
+                        cumplir este gran sueño.</p>
+                </div>
+                <div class="sec_2">
+                    <div class="img_help">
+                        <img src="" alt="">
+                    </div>
+                    <div class="buttom_2">
+                        <a href="">
+                            <p>Haz tu aporte</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
