feat: :lipstick: help css structure add

--- a/index.html
+++ b/index.html
@@ -178,21 +178,25 @@
             </div>
         </section>
         <section class="help_container">
-            <div class="help">
-                <div class="title_1">
-                    <h1>Apóyanos</h1>
+            <div class="sec_1">
+                <div class="help">
+                    <div class="tittle_1">
+                        <h1>Apóyanos</h1>
+                    </div>
                 </div>
-            </div>
-            <div class="info_2">
-                <div class="text">
-                    <p>Por favor, si quieres ayudarnos económicamente, no<br>
+                <div class="info_2">
+                    <div class="text">
+                        <p>Por favor, si quieres ayudarnos económicamente, no<br>
                         dudes en donar en Kickstarter.<br>
                         Así financiarías nuestro proyecto y contribuirías a<br>
                         cumplir este gran sueño.</p>
+                    </div>
                 </div>
-                <div class="sec_2">
+            </div>
+            <div class="sec_2">  
+                <div class="info_3">
                     <div class="img_help">
-                        <img src="" alt="">
+                        <img src="/storage/img/Monitor.png" alt="">
                     </div>
                     <div class="buttom_2">
                         <a href="">
