feat: :lipstick: about us css tructure add

--- a/index.html
+++ b/index.html
@@ -206,6 +206,36 @@
                 </div>
             </div>
         </section>
+        <section class="about_us">
+            <div class="container_us">
+                <div class="sec_1_1">
+                    <div class="tittle_1_1">
+                        <h1>Sobre Nosotros</h1>
+                    </div>
+                    <div class="text_1">
+                        <p>
+                            Somos Aqua, un equipo que apuesta por la<br>
+                            inclusión, principalmente por las personas no<br>
+                            videntes o de visibilidad reducida.<br>
+                            Creemos que la diversión no debe distinguir<br>
+                            condiciones físicas es por eso que desarrollamos<br>
+                            “CRAE”, el cual busca ser un juego de cartas<br>
+                            inclusivo donde personas videntes o no videntes<br>
+                            pueden participar y disfrutar en conjunto.<br>
+                            <br>
+                            Puedes encontrarnos en Instagram como @crae.cl o<br>
+                            llamarnos a nuestro número telefónico 9 7889 4758.
+                        </p>
+                    </div>
+                </div>
+                <div class="sec_2_2">
+                    <div class="img_2_2">
+                        <img src="/storage/img/Us.png" alt="">
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
