--- a/index.html
+++ b/index.html
@@ -237,5 +237,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <img src="/storage/img/Footer.png" alt="">
+    </footer>
 </body>
 </html>
