feat: :sparkles: links fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="container_logo">
                 <div class="logo">
                     <p>AQUA</p>
-                    <img src="/storage/img/Water.png" alt="">
+                    <img src="storage/img/Water.png" alt="">
                 </div>
             </div>
             <div class="container_menu">
@@ -34,10 +34,10 @@
             <div class="night_container">
                 <div class="night">
                     <div class="moon">
-                        <img src="/storage/img/Moon.png" alt="">
+                        <img src="storage/img/Moon.png" alt="">
                     </div>
                     <div class="sun">
-                        <img src="/storage/img/Sun.png" alt="">
+                        <img src="storage/img/Sun.png" alt="">
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
         <section class="presentation">
             <div class="side_1">
                 <div class="logo_2">
-                    <img src="/storage/img/Logo.png" alt="">
+                    <img src="storage/img/Logo.png" alt="">
                 </div>
                 <div class="info">
                     <h1>
@@ -59,13 +59,13 @@
             <div class="side_2">
                 <div class="info_1">
                     <div class="photo">
-                        <img src="/storage/img/Card.png" alt="">
+                        <img src="storage/img/Card.png" alt="">
                     </div>
                     <div class="buttom_1">
                         <div class="item">
                             <a href="">
                                 <div class="market">
-                                    <img src="/storage/img/Market.png" alt="">
+                                    <img src="storage/img/Market.png" alt="">
                                 </div>
                                 <div class="buy">
                                     <p>Comprar</p>
@@ -76,13 +76,13 @@
                 </div>
                 <div class="social">
                     <div>
-                        <a href=""><img src="/storage/img/F.png" alt=""></a>
+                        <a href=""><img src="storage/img/F.png" alt=""></a>
                     </div>
                     <div>
-                        <a href=""><img src="/storage/img/I.png" alt=""></a>
+                        <a href=""><img src="storage/img/I.png" alt=""></a>
                     </div>
                     <div>
-                        <a href=""><img src="/storage/img/K.png" alt=""></a>
+                        <a href=""><img src="storage/img/K.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             <div class="rules">
                 <div class="rule_1">
                     <div class="rule_1_img">
-                        <img src="/storage/img/1.png" alt="">
+                        <img src="storage/img/1.png" alt="">
                     </div>
                     <div class="rule_1_text">
                         <p>Uno de los jugadores hace de “creativo” en cada uno de los turnos.<br>
@@ -110,12 +110,12 @@
                         </p>
                     </div>
                     <div class="rule_1_img_1">
-                        <img src="/storage/img/Cards.png" alt="">
+                        <img src="storage/img/Cards.png" alt="">
                     </div>
                 </div>
                 <div class="rule_2">
                     <div class="rule_2_img">
-                        <img src="/storage/img/2.png" alt="">
+                        <img src="storage/img/2.png" alt="">
                     </div>
                     <div class="rule_2_text">
                         <p>Comenzamos el juego de izquierda a derecha. Selecciona una carta<br>
@@ -125,12 +125,12 @@
                         </p>
                     </div>
                     <div class="rule_2_img_1">
-                        <img src="/storage/img/Check.png" alt="">
+                        <img src="storage/img/Check.png" alt="">
                     </div>
                 </div>
                 <div class="rule_3">
                     <div class="rule_3_img">
-                        <img src="/storage/img/3.png" alt="">
+                        <img src="storage/img/3.png" alt="">
                     </div>
                     <div class="rule_3_text">
                         <p>El objetivo de los jugadores es adivinar cuál de las cartas es la que<br>
@@ -141,12 +141,12 @@
                         </p>
                     </div>
                     <div class="rule_3_img_1">
-                        <img src="/storage/img/Vote.png" alt="">
+                        <img src="storage/img/Vote.png" alt="">
                     </div>
                 </div>
                 <div class="rule_4">
                     <div class="rule_4_img">
-                        <img src="/storage/img/4.png" alt="">
+                        <img src="storage/img/4.png" alt="">
                     </div>
                     <div class="rule_4_text">
                         <p>- Si todos los jugadores aciertan la carta del creativo, todos los<br>
@@ -157,12 +157,12 @@
                         </p>
                     </div>
                     <div class="rule_4_img_1">
-                        <img src="/storage/img/List.png" alt="">
+                        <img src="storage/img/List.png" alt="">
                     </div>
                 </div>
                 <div class="rule_5">
                     <div class="rule_5_img">
-                        <img src="/storage/img/5.png" alt="">
+                        <img src="storage/img/5.png" alt="">
                     </div>
                     <div class="rule_4_text">
                         <p>Comenzamos el juego de izquierda a derecha. Selecciona una carta<br>
@@ -172,7 +172,7 @@
                         </p>
                     </div>
                     <div class="rule_5_img_1">
-                        <img src="/storage/img/Flag.png" alt="">
+                        <img src="storage/img/Flag.png" alt="">
                     </div>
                 </div>
             </div>
@@ -196,7 +196,7 @@
             <div class="sec_2">  
                 <div class="info_3">
                     <div class="img_help">
-                        <img src="/storage/img/Monitor.png" alt="">
+                        <img src="storage/img/Monitor.png" alt="">
                     </div>
                     <div class="buttom_2">
                         <a href="">
@@ -230,7 +230,7 @@
                 </div>
                 <div class="sec_2_2">
                     <div class="img_2_2">
-                        <img src="/storage/img/Us.png" alt="">
+                        <img src="storage/img/Us.png" alt="">
                     </div>
                 </div>
                 </div>
@@ -238,7 +238,7 @@
         </section>
     </main>
     <footer>
-        <img src="/storage/img/Footer.png" alt="">
+        <img src="storage/img/Footer.png" alt="">
     </footer>
 </body>
 </html>
